Templatize operator installations
Signed-off-by: Justin Kulikauskas <jkulikau@redhat.com>

--- a/policyset/input-compliance/policy-compliance-operator-install.yaml
+++ b/policyset/input-compliance/policy-compliance-operator-install.yaml
@@ -18,10 +18,11 @@ metadata:
   name: compliance-operator
   namespace: openshift-compliance
 spec:
+  channel: '{{ fromConfigMap "default" "opp-policy-config" "compliance_operator_channel" }}'
   installPlanApproval: Automatic
   name: compliance-operator
-  source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  source: '{{ fromConfigMap "default" "opp-policy-config" "compliance_operator_source" }}'
+  sourceNamespace: '{{ fromConfigMap "default" "opp-policy-config" "compliance_operator_sourcenamespace" }}'
 ---
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
