--- a/policyset/input-acs-central/policy-acs-operator-central.yaml
+++ b/policyset/input-acs-central/policy-acs-operator-central.yaml
@@ -21,11 +21,11 @@ metadata:
   name: rhacs-operator
   namespace: rhacs-operator
 spec:
-  channel: latest
+  channel: '{{ fromConfigMap "default" "opp-policy-config" "rhacs_operator_channel" }}'
   installPlanApproval: Automatic
   name: rhacs-operator
-  source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  source: '{{ fromConfigMap "default" "opp-policy-config" "rhacs_operator_source" }}'
+  sourceNamespace: '{{ fromConfigMap "default" "opp-policy-config" "rhacs_operator_sourcenamespace" }}'
 ---
 apiVersion: platform.stackrox.io/v1alpha1
 kind: Central
