--- a/policyset/input-quay/policy-config-quay.yaml
+++ b/policyset/input-quay/policy-config-quay.yaml
@@ -22,11 +22,11 @@ metadata:
   name: quay-operator
   namespace: local-quay
 spec:
-  channel: stable-3.6
+  channel: '{{ fromConfigMap "default" "opp-policy-config" "quay_operator_channel" }}'
   installPlanApproval: Automatic
   name: quay-operator
-  source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  source: '{{ fromConfigMap "default" "opp-policy-config" "quay_operator_source" }}'
+  sourceNamespace: '{{ fromConfigMap "default" "opp-policy-config" "quay_operator_sourcenamespace" }}'
 ---
 apiVersion: v1
 data:
