--- a/policyset/input-sensor/policy-acs-central-ca-bundle.yaml
+++ b/policyset/input-sensor/policy-acs-central-ca-bundle.yaml
@@ -148,11 +148,11 @@ metadata:
   name: rhacs-operator
   namespace: openshift-operators
 spec:
-  channel: latest
+  channel: '{{ fromConfigMap "default" "opp-policy-config" "rhacs_operator_channel" }}'
   installPlanApproval: Automatic
   name: rhacs-operator
-  source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  source: '{{ fromConfigMap "default" "opp-policy-config" "rhacs_operator_source" }}'
+  sourceNamespace: '{{ fromConfigMap "default" "opp-policy-config" "rhacs_operator_sourcenamespace" }}'
 ---
 apiVersion: platform.stackrox.io/v1alpha1
 kind: SecuredCluster
