--- a/policyset/input-sensor/policy-advanced-managed-cluster-security.yaml
+++ b/policyset/input-sensor/policy-advanced-managed-cluster-security.yaml
@@ -21,11 +21,11 @@ metadata:
   name: rhacs-operator
   namespace: rhacs-operator
 spec:
-  channel: latest
+  channel: '{{ fromConfigMap "default" "opp-policy-config" "quay_operator_channel" }}'
   installPlanApproval: Automatic
   name: rhacs-operator
-  source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  source: '{{ fromConfigMap "default" "opp-policy-config" "quay_operator_source" }}'
+  sourceNamespace: '{{ fromConfigMap "default" "opp-policy-config" "quay_operator_sourcenamespace" }}'
 ---
 apiVersion: v1
 data:
