--- a/policyset/policyGenerator.yaml
+++ b/policyset/policyGenerator.yaml
@@ -11,7 +11,7 @@ policyDefaults:
     - CM-2 Baseline Configuration
   namespace: policies
   policySets:
-    - openshift-plus-all
+    - openshift-plus-hub
   remediationAction: enforce
   severity: medium
   standards:
@@ -47,8 +47,8 @@ policies:
     - SI-5 Security Alerts Advisories and Directives
   manifests:
     - path: input-sensor/policy-advanced-managed-cluster-security.yaml
-  # policySets:
-  #   - openshift-plus-clusters
+  policySets:
+    - openshift-plus-clusters
 - name: policy-advanced-managed-cluster-status
   categories:
     - SI System and Information Integrity
@@ -56,9 +56,9 @@ policies:
     - SI-5 Security Alerts Advisories and Directives
   manifests:
     - path: input-sensor/policy-advanced-managed-cluster-status.yaml
-  # policySets:
-  #   - openshift-plus-hub
-  #   - openshift-plus-clusters
+  policySets:
+    - openshift-plus-hub
+    - openshift-plus-clusters
   remediationAction: inform
 # ACS Policies - end
 # Observability Policy - start
@@ -71,21 +71,21 @@ policies:
     - path: input-acm-observability/
 # Observability Policy - end
 # ODF Policies - start
-# - name: policy-odf
-#   categories:
-#     - SI System and Information Integrity
-#   controls: 
-#     - SI-7 Software Firmware and Information Integrity
-#   manifests:
-#     - path: input-odf/policy-odf.yaml
-# - name: policy-odf-status
-#   categories:
-#     - SI System and Information Integrity
-#   controls: 
-#     - SI-7 Software Firmware and Information Integrity
-#   manifests:
-#     - path: input-odf/policy-odf-status.yaml
-#   remediationAction: inform
+- name: policy-odf
+  categories:
+    - SI System and Information Integrity
+  controls: 
+    - SI-7 Software Firmware and Information Integrity
+  manifests:
+    - path: input-odf/policy-odf.yaml
+- name: policy-odf-status
+  categories:
+    - SI System and Information Integrity
+  controls: 
+    - SI-7 Software Firmware and Information Integrity
+  manifests:
+    - path: input-odf/policy-odf-status.yaml
+  remediationAction: inform
 # ODF Policies - end
 # Quay Policies - start
 - name: policy-config-quay
@@ -113,22 +113,22 @@ policies:
     - CA-7 Continuous Monitoring
   manifests:
     - path: input-compliance/
-  # policySets:
-  #   - openshift-plus-clusters
-  #   - openshift-plus-hub
+  policySets:
+    - openshift-plus-clusters
+    - openshift-plus-hub
 # Compliance Operator Policies - end
 policySets:
-  # - description: The OpenShift Platform Plus policy set applies several policies
-  #     that installs the OpenShift Platform Plus products using best practices
-  #     that allow them to work well together. This policy set if focued on 
-  #     the components that install to the Advanced Cluster Management hub.
-  #   name: openshift-plus-hub
-  #   placement:
-  #     placementPath: input/hub-placement.yaml
+  - description: The OpenShift Platform Plus policy set applies several policies
+      that installs the OpenShift Platform Plus products using best practices
+      that allow them to work well together. This policy set if focued on 
+      the components that install to the Advanced Cluster Management hub.
+    name: openshift-plus-hub
+    placement:
+      placementPath: input/hub-placement.yaml
   - description: The OpenShift Platform Plus policy set applies several policies
       that installs the OpenShift Platform Plus products using best practices
       that allow them to work well together. This policy set if focued on 
       the components that install to every managed cluster.
-    name: openshift-plus-all
+    name: openshift-plus-clusters
     placement:
       placementPath: input/clusters-placement.yaml
